--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -6,7 +6,7 @@ description: 'Next  Level3  Documentation'
 
 Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solution tailored to provide an impenetrable shield for your AWS environment against unauthorized intrusion and potential security breaches with a system that incorporates identity verification protocols, MultiFactor Authentication, and dynamic access controls.
 
-### Use Cases
+### Use  Cases
 
 - Securing Dormant or Stagnant Accounts
 - Employee Onboarding and Off-boarding Scenarios
@@ -15,7 +15,7 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
 - Securing Custom Applications
 - Mitigating Existing Attacks
 
-## Getting Started
+## Getting  Started
 
 <CardGroup cols={2}>
   <Card
@@ -74,3 +74,26 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
     API documentation website
   </Card>
 </CardGroup>
+
+## Setting  up  your  Account
+The first step to get started using Next Level3 Cloud Identity JIT Access service is to create your account. This will give you access to securing your applications with Next Level3 authentication, adding and managing your organizations users and groups, integrations, managing cyber policies, and monitoring access activity.
+
+## Securing  your  Applications
+Next Level3 authentication is a Zero-Trust Identity Access Authentication service that is used for securing your company's applications. When implemented, it enables you to set lock statuses for applications, manage the users that have access to them, and monitor access activity.
+
+## Setting  up  End  Users
+Like most companies, there is more than one user identity that has access to its applications and a security requirement to protect its users identities. Next Level3 Cloud Identity JIT Access allows you to allocate access privileges to provide multiple layers of security to the users and groups in your network and create or remove them as needed.
+ 
+## Integrating  your  Identity  Provider
+Next Level3 Identity Provider integrations are designed to be used for any of your existing applications or sites which are using Auth0, Microsoft Azure AD B2C, Microsoft Azure AD and O365, AWS Cognito, and AWS IAM for authentication. Integrating your identity provider with Next Level3 will add the extra layer of security needed to secure your organizational identities.
+
+## Native Language integrations
+Next Level3 native language integrations include Node JS, Python, and Microsoft .NET Framework. Our integration will allow you to easily add account protection to any application. 
+        
+## Cyber  Policies  and  Monitoring  Activity
+Cyber Policies are used to control access to your application accounts and manage that access for your companies users (employees, contractors, third parties and customers). There are a number of use cases for a variety of industries in which Cyber Policies provide solutions to solve problems. 
+
+With NL3 Activity logs, you can view your company's user activity. This feature allows you to monitor account lock statuses and when a user has accessed your company applications.
+
+## API  Documentation
+NL3 API Documentation is hosted by SwaggerUI. In case you need to reference it, it is available both externally for public access and internally once you have registered your company account.
