--- a/Features/Integrating your Identity Provider.mdx
+++ b/Features/Integrating your Identity Provider.mdx
@@ -31,7 +31,7 @@ The Next Level3 Auth0 integration is designed to be used for any of your existin
   <Tab
   title="Account Protection Check">
 ### NL3 Auth0 Action for Performing Account Protection Check
-This integration allows Auth0 customers to integrate a post login action to check the lock status for their users' accounts and block access if locked. This integration requires an active license with Next Level3. Please visit (www.nextlevel3.com)[https://www.nextlevel3.com] for more details on how to sign up for NL3 Account Protection.
+This integration allows Auth0 customers to integrate a post login action to check the lock status for their users' accounts and block access if locked. This integration requires an active license with Next Level3. Please visit https://www.nextlevel3.com for more details on how to sign up for NL3 Account Protection.
 
 #### Steps for configuring as a custom action
 1. Log into manage.auth0.com as a user with permissions to create and modify custom actions
