--- a/Features/Protecting your Endpoints.mdx
+++ b/Features/Protecting your Endpoints.mdx
@@ -49,8 +49,8 @@ You will need:
     The following command can be entered to give designated users NextLevel3 MFA bypass privileges:
     <img src="/images/pam/pam8.png" />
     </Accordion>
-    <Accordion title="Linux" icon="linux">
-## Linux
+    <Accordion title="Linux x86" icon="linux">
+## Linux x86_64
 
 ### Prerequisites
 
@@ -71,6 +71,7 @@ You will need:
     5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
     <img src="/images/pam/pam3.png" />
     6. Download the installer, and copy it to the system you want to install it on.
+    <Tip>The instructional depictions are for reference purposes only, please adjust the file and folder names to correspond with the file contents you downloaded.</Tip>
     <img src="/images/pam/pam9.png" />
     7. Become the root user and extract the installer to the designated folder.
     <img src="/images/pam/pam10.png" />
@@ -116,9 +117,115 @@ You will need:
     "GroupTry": [ "wheel", "staff" ]
 ```
     </Accordion>
-    <Accordion title="MacOS" icon="apple">
-    ## Apple...  Coming  Soon!
+    <Accordion title="Linux ARM" icon="linux">
+## Linux ARM
+
+### Prerequisites
+
+You will need:
+
+    * Access to the NextLevel3 portal to an existing application with an API key.
+    * Access as ‘root’ (directly or via su/sudo) on the system that the module will be installed on.
+    * Users available for testing.
+
+### Standard  Installation
+
+    1. Log into your NextLevel3 portal at https://company.nextlevel3.com/
+    2. Navigate to Applications and choose the appropriate application (in this case jump-servers).
+    3. Copy the application URL (in this case jump-servers.infra.company.com) somewhere you can retrieve it.
+    <img src="/images/pam/pam1.png" />
+    4. Next, navigate to Keys & Tokens, select the Application from step 2 and Key Type “Application Signing Keys”, then click on the Key to retrieve the Application Signing Key.
+    <img src="/images/pam/pam2.png" />
+    5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
+    <img src="/images/pam/pam3.png" />
+    6. Download the installer, and copy it to the system you want to install it on.
+    <Tip>The instructional depictions are for reference purposes only, please adjust the file and folder names to correspond with the file contents you downloaded.</Tip>
+    <img src="/images/pam/pam9.png" />
+    7. Become the root user and extract the installer (using the folder name you downloaded) to the designated folder.
+    <img src="/images/pam/pam10.png" />
+    8. Run the installer (using the folder name that was extracted), it will ask you for the information stored earlier.
+    <img src="/images/pam/pam11.png" />
+    9. Next the installer shows the changes to add nextlevel3 to the PAM configuration. If you are happy with these changes, type ‘y’ and press enter.
+    <img src="/images/pam/pam12.png" />
+    10. The installer will then install the module and its configuration.
+    <img src="/images/pam/pam13.png" />
+    11. This will install the module with the defaults: all accounts and groups will require NextLevel3 MFA, and, if the NextLevel3 server cannot be contacted, will be denied access.
+    <img src="/images/pam/pam6.png" />
+    12. Confirm that you and other users can log in, especially that the appropriate connectivity and usernames are in place.
+
+
+### Additional  Configuration
+
+    There are three additional settings that you can change by editing the configuration file. By default this is installed as /etc/nextlevel3.json. The file created by the sample installation is below:
+    <img src="/images/pam/pam15.png" />
+
+    The APIKey and APPURI values were filled in by the installer. Settings that you can change are:
+
+        - AccountTry: a list of accounts that are allowed to log in if the nextlevel3 service cannot be contacted. If the service can be contacted, MFA will occur, if it cannot be contacted they will be allowed in. This should be restricted to accounts used for “break glass” functions.
+        - GroupTry: has the same behavior as AccountTry, but contains a list of groups.
+        - Trace: enable tracing, leave this to false unless you are diagnosing an issue with our support team.
     
+    The AccountTry and GroupTry configuration are both JSON arrays. Example values:
+
+```JSON
+    "AccountTry": [ "breakglass", "second-account" ]
+    "GroupTry": [ "wheel", "staff" ]
+```
+    </Accordion>
+    <Accordion title="MacOS" icon="apple">
+    ## Apple
+    
+    ### Prerequisites
+
+You will need:
+
+    * Access to the NextLevel3 portal to an existing application with an API key.
+    * Access as ‘root’ (directly or via su/sudo) on the system that the module will be installed on.
+    * Users available for testing.
+
+### Standard  Installation
+
+    1. Log into your NextLevel3 portal at https://company.nextlevel3.com/
+    2. Navigate to Applications and choose the appropriate application (in this case jump-servers).
+    3. Copy the application URL (in this case jump-servers.infra.company.com) somewhere you can retrieve it.
+    <img src="/images/pam/pam1.png" />
+    4. Next, navigate to Keys & Tokens, select the Application from step 2 and Key Type “Application Signing Keys”, then click on the Key to retrieve the Application Signing Key.
+    <img src="/images/pam/pam2.png" />
+    5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
+    <img src="/images/pam/pam3.png" />
+    6. Download the installer, and copy it to the system you want to install it on.
+    <Tip>The instructional depictions are for reference purposes only, please adjust the folder name to correspond with the file contents you downloaded.</Tip>
+    <img src="/images/pam/pam9.png" />
+    7. Become the root user and extract the installer (using the folder name you downloaded) to the designated folder.
+    <img src="/images/pam/pam10.png" />
+    8. Run the installer (using the folder name that was extracted), it will ask you for the information stored earlier.
+    <img src="/images/pam/pam11.png" />
+    9. Next the installer shows the changes to add nextlevel3 to the PAM configuration. If you are happy with these changes, type ‘y’ and press enter.
+    <img src="/images/pam/pam12.png" />
+    10. The installer will then install the module and its configuration.
+    <img src="/images/pam/pam13.png" />
+    11. This will install the module with the defaults: all accounts and groups will require NextLevel3 MFA, and, if the NextLevel3 server cannot be contacted, will be denied access.
+    <img src="/images/pam/pam6.png" />
+    12. Confirm that you and other users can log in, especially that the appropriate connectivity and usernames are in place.
+
+
+### Additional  Configuration
+
+    There are three additional settings that you can change by editing the configuration file. By default this is installed as /etc/nextlevel3.json. The file created by the sample installation is below:
+    <img src="/images/pam/pam15.png" />
+
+    The APIKey and APPURI values were filled in by the installer. Settings that you can change are:
+
+        - AccountTry: a list of accounts that are allowed to log in if the nextlevel3 service cannot be contacted. If the service can be contacted, MFA will occur, if it cannot be contacted they will be allowed in. This should be restricted to accounts used for “break glass” functions.
+        - GroupTry: has the same behavior as AccountTry, but contains a list of groups.
+        - Trace: enable tracing, leave this to false unless you are diagnosing an issue with our support team.
+    
+    The AccountTry and GroupTry configuration are both JSON arrays. Example values:
+
+```JSON
+    "AccountTry": [ "breakglass", "second-account" ]
+    "GroupTry": [ "wheel", "staff" ]
+```
     </Accordion>
 </AccordionGroup>
 
