--- a/Features/Protecting your Endpoints.mdx
+++ b/Features/Protecting your Endpoints.mdx
@@ -71,7 +71,8 @@ You will need:
     5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
     <img src="/images/pam/pam3.png" />
     6. Download the installer, and copy it to the system you want to install it on.
-    <Tip>The instructional depictions are for reference purposes only, please adjust the file and folder names to correspond with the file contents you downloaded.</Tip>
+     
+    <Tip>The instructional depictions are for reference purposes only, please adjust the file and folder names to correspond with the content you downloaded.</Tip>
     <img src="/images/pam/pam9.png" />
     7. Become the root user and extract the installer to the designated folder.
     <img src="/images/pam/pam10.png" />
@@ -139,7 +140,8 @@ You will need:
     5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
     <img src="/images/pam/pam3.png" />
     6. Download the installer, and copy it to the system you want to install it on.
-    <Tip>The instructional depictions are for reference purposes only, please adjust the file and folder names to correspond with the file contents you downloaded.</Tip>
+     
+    <Tip>The instructional depictions are for reference purposes only, please adjust the file and folder names to correspond with the content you downloaded.</Tip>
     <img src="/images/pam/pam9.png" />
     7. Become the root user and extract the installer (using the folder name you downloaded) to the designated folder.
     <img src="/images/pam/pam10.png" />
@@ -173,9 +175,9 @@ You will need:
 ```
     </Accordion>
     <Accordion title="MacOS" icon="apple">
-    ## Apple
+## Apple
     
-    ### Prerequisites
+### Prerequisites
 
 You will need:
 
@@ -194,7 +196,8 @@ You will need:
     5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
     <img src="/images/pam/pam3.png" />
     6. Download the installer, and copy it to the system you want to install it on.
-    <Tip>The instructional depictions are for reference purposes only, please adjust the folder name to correspond with the file contents you downloaded.</Tip>
+     
+    <Tip>The instructional depictions are for reference purposes only, please adjust the file and folder names to correspond with the content you downloaded.</Tip>
     <img src="/images/pam/pam9.png" />
     7. Become the root user and extract the installer (using the folder name you downloaded) to the designated folder.
     <img src="/images/pam/pam10.png" />
