--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -19,11 +19,18 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
 
 <CardGroup cols={2}>
   <Card
-    title="Setting  up  your  Account"
+    title="Setting  up  your  Account  for  Desktop"
     icon="user"
-    href="/Features/Account Setup"
+    href="/Features/Setting up your Account for Desktop"
   >
-    Registering your company to the NextLevel3 Company Portal
+    Registering your company to the NextLevel3 Company Portal using your desktop
+  </Card>
+   <Card
+    title="Setting  up  your  Account  for  Mobile"
+    icon="user"
+    href="/Features/Setting up your Account for Mobile"
+  >
+    Registering your company to the NextLevel3 Company Portal using your mobile device
   </Card>
   <Card
     title="Securing  your  Applications"
@@ -53,7 +60,7 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
     Auth0, Microsoft Azure AD, AWS Cognito, and AWS IAM Integration Support
   </Card>
   <Card
-    title="Native Language Integrations"
+    title="Native  Language  Integrations"
     href="/Features/Native Language Integrations"
     icon="code"
     >
@@ -76,7 +83,7 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
 </CardGroup>
 
 ## Setting  up  your  Account
-The first step to get started using Next Level3 Cloud Identity JIT Access service is to create your account. This will give you access to securing your applications with Next Level3 authentication, adding and managing your organizations users and groups, integrations, managing cyber policies, and monitoring access activity.
+The first step to get started using Next Level3 Cloud Identity JIT Access service is to create your account. This can be done by either using your desktop through a web browser or mobile device through the Next Level3 app which is available for Android and iOS devices. To utilize the full capabilities of Next Level3 security features you will need to configure your account using a desktop because the mobile application doesn't have access to configuration functionality.
 
 ## Securing  your  Applications
 Next Level3 authentication is a Zero-Trust Identity Access Authentication service that is used for securing your company's applications. When implemented, it enables you to set lock statuses for applications, manage the users that have access to them, and monitor access activity.
