--- a/Features/Setting up your Account for Desktop.mdx
+++ b/Features/Setting up your Account for Desktop.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Setting  up  your  Account'
+title: 'Setting  up  your  Account for Desktop'
 description: 'Start  Protecting  your  Applications  and  Identity  Today'
 ---
 
