--- a/Features/Setting up your Account for Mobile.mdx
+++ b/Features/Setting up your Account for Mobile.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Next Level3 Mobile Application'
-description: 'Setting up your mobile devices'
+title: 'Setting up your Account for Mobile'
+description: 'Start  Protecting  your  Applications  and  Identity  Today'
 ---
 The Next Level3 application is available for both Android and iOS devices and is available on both the Apple and Google Play Stores. To access the company portal on your mobile device start by getting the app:
 
