--- a/Features/Setting up your Account for Mobile.mdx
+++ b/Features/Setting up your Account for Mobile.mdx
@@ -88,7 +88,7 @@ After installing the application you will need to either register your company p
     <Accordion
     title="Pairing your Apple Device"
     icon="rotate">
-    </Tabs>
+    <Tabs>
         <Tab
         title=" "
         icon="1">
