--- a/Features/Setting up your Account for Mobile.mdx
+++ b/Features/Setting up your Account for Mobile.mdx
@@ -137,6 +137,7 @@ After installing the application you will need to either register your company p
         ### Use biometric scanning to authenticate into your account
         <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170 (6).png" />
         </Tab>
+    </Tabs>
     </Accordion>
 </AccordionGroup>
 
@@ -226,7 +227,7 @@ After installing the application you will need to either register your company p
 ## Android Devices
 
 ### Accessing the App
-    <AccordionGroup>
+<AccordionGroup>
     <Accordion
     title="Registering your company portal account"
     icon="User">
@@ -274,7 +275,7 @@ After installing the application you will need to either register your company p
     title="Pairing your Apple Devices"
     icon="rotate">
     ### Follow the step-by-step tabs below to pair your device:
-    </Tabs>
+    <Tabs>
         <Tab
         title=" "
         icon="1">
@@ -329,7 +330,7 @@ After installing the application you will need to either register your company p
         ### Use biometric scanning to authenticate into your account using your security key
         <img src="C:\Users\18649\Downloads\Security Key - 4.png" />
         </Tab>
-
+    </Tabs>
     </Accordion>
 </AccordionGroup>
 ### Using the App
@@ -361,7 +362,7 @@ After installing the application you will need to either register your company p
         title="Notifications"
         icon="bell">
         The notification settings allow you to decide whether or not you would like to receive email alerts to the email associated with your account.
-        <img src="C:\Users\18649\Downloads\Settings - Notifications.png">
+        <img src="C:\Users\18649\Downloads\Settings - Notifications.png" />
         </Tab>
         <Tab
         title="Manage Devices"
@@ -406,7 +407,7 @@ After installing the application you will need to either register your company p
         <img src="C:\Users\18649\Downloads\License - 2.png" />
         <img src="C:\Users\18649\Downloads\License - 3.png" />
         Once you agree to the the terms and conditions you can tap the support icon in the bottom right corner to send us a message and we will get back to you as soon as possible.
-        <img src="C:\Users\18649\Downloads\License - Send Us A Message.png">
+        <img src="C:\Users\18649\Downloads\License - Send Us A Message.png" />
         </Tab>
         <Tab
         title="Logout"
